# great-gitlab-ci-python-advanced

./: .template.env  docker-compose.yml  init-database.sh  pyproject.toml
.github/workflows/: main.yml  tests.yaml
alembic/: env.py
alembic/versions/: 2025_03_23_2053-faea70d523c4_создание_таблиц.py  2025_03_24_2257-dbfdfe0fb118_update_tables.py  2025_03_26_2310-829a8568536d_base.py  2025_03_30_0050-c360b26fc870_ingredients.py
src/: .env  main.py
src/api/: ingredient.py  main_page.py  recipes.py
src/api/crud/: ingredient.py  recipe.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  ingredient.py  ingredients_in_recipe.py  recipe.py
src/core/schemas/: ingredient.py  main_page.py  recipe.py
src/utils/: __init__.py  case_converter.py
tests/: conftest.py  test_routes.py
