[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.10.6"}
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.39"}
asyncpg = "^0.30.0"
alembic = "^1.15.1"
black = "^25.1.0"
mypy = "^1.15.0"
isort = "^6.0.1"
flake8 = "^7.1.2"
pytest-asyncio = "^0.25.3"
httpx = "^0.28.1"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
