[project]
name = "great-gitlab-ci-python-advanced"
version = "0.1.0"
description = ""
authors = [
    {name = "imihawk",email = "kuchkinigor@rambler.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [

    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn[standart] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.11.2,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


