[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = {extras = ["standart"], version = "^0.34.0"}
pydantic = {extras = ["email"], version = "^2.11.2"}
pydantic-settings = "^2.8.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.40"}
asyncpg = "^0.30.0"
alembic = "^1.15.2"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
httpx = "^0.28.1"
mypy = "^1.15.0"
isort = "^6.0.1"
flake8 = "^7.2.0"


[tool.black]
line-length = 79

[tool.isort]
multi_line_output = 3
include_tailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line-length = 79

[tool.mypy]
plugins = ["pydantic.mypy" ]
follow_imports = "skip"

[tool.pytest.init_options]
asyncio_default_fixture_loop_scope = "session"

